[gd_scene load_steps=5 format=3 uid="uid://lpyqwlbsh6sh"]

[ext_resource type="Script" path="res://Scripts/card.gd" id="1_3gpws"]
[ext_resource type="Texture2D" uid="uid://ccso1wnkrgqi3" path="res://Assets/Deck.png" id="2_7co4k"]
[ext_resource type="Theme" uid="uid://j2pw8ihd8q83" path="res://font.tres" id="3_ik0yp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oxyyf"]
size = Vector2(178, 265)

[node name="Card" type="Node2D"]
script = ExtResource("1_3gpws")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7co4k")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_oxyyf")

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture = ExtResource("2_7co4k")

[node name="CardName" type="RichTextLabel" parent="."]
offset_left = -85.0
offset_top = -127.0
offset_right = 90.0
offset_bottom = -58.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_ik0yp")
bbcode_enabled = true
fit_content = true

[node name="CardHealth" type="RichTextLabel" parent="."]
offset_left = -30.4545
offset_top = -155.0
offset_right = 31.5455
offset_bottom = -132.0
theme = ExtResource("3_ik0yp")
bbcode_enabled = true

[node name="Move1" type="Button" parent="."]
offset_left = -84.0
offset_right = 84.0
offset_bottom = 31.0
theme = ExtResource("3_ik0yp")
toggle_mode = true

[node name="Move2" type="Button" parent="."]
offset_left = -84.0
offset_top = 32.0
offset_right = 84.0
offset_bottom = 63.0
theme = ExtResource("3_ik0yp")
toggle_mode = true

[node name="Move3" type="Button" parent="."]
offset_left = -84.0
offset_top = 64.0
offset_right = 84.0
offset_bottom = 95.0
theme = ExtResource("3_ik0yp")
toggle_mode = true

[node name="Move4" type="Button" parent="."]
offset_left = -84.091
offset_top = 96.0
offset_right = 83.909
offset_bottom = 127.0
theme = ExtResource("3_ik0yp")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
